--- a/BuildMyUnicorn/Views/Team/Index.cshtml
+++ b/BuildMyUnicorn/Views/Team/Index.cshtml
@@ -49,7 +49,7 @@
 
             </ol>
             &nbsp;&nbsp;
-            <a href="~/Team/Create" class="btn btn-info return jsSubmit" data-toggle="modal" data-target="#dialogClientUpdate">Add New </a>
+            <a href="~/Team/Create" class="btn btn-info return">Add New </a>
             @*<a href="~/Team/Create" class="btn btn-info return jsSubmit">Add New </a>*@
             @*<button type="button" class="btn btn-info btn-rounded m-t-10 float-right"
                         data-toggle="modal" data-target="#add-contact">
