--- a/BuildMyUnicorn/Views/Questionnaire/_QuestionnairePartial.cshtml
+++ b/BuildMyUnicorn/Views/Questionnaire/_QuestionnairePartial.cshtml
@@ -25,11 +25,11 @@
                 {
                     foreach (var item in Model)
                     {
-                        <tr style='background-color:#303641' class="@(item.IsActive == true ? "" : "inActiveSurvey") ">
+                        <tr style='background-color:#303641' class="@(item.IsActive == true ? "" : "inActiveSurvey");">
 
                             <td class="text-left">
 
-                                <input type="hidden" id="@item.SurveyID" value="@strUrl/Survey?SurveyID=@item.SurveyID" )" />
+                                <input type="hidden" id="@item.SurveyID" value="@strUrl/Survey?SurveyID=@item.SurveyID)" />
                                 @index
                                 @{ index++; }
                             </td>
@@ -99,7 +99,7 @@
                 }
                 else
                 {
-                    < tr style = "background-color:#303641" > < td colspan = "6" style = "height:100px; text-align:center; padding-top:50px" > No Record Found</ td > </ tr >
+                    <tr style = "background-color:#303641" > <td colspan = "7" style = "height:100px; text-align:center; padding-top:50px"> No Record Found </td> </tr>
                 }
 
             </tbody>
