TodoTask :- Added, Deleted, Updated todo via ajax

--- a/BuildMyUnicorn/Views/Shared/_Layout.cshtml
+++ b/BuildMyUnicorn/Views/Shared/_Layout.cshtml
@@ -573,6 +573,8 @@
     <script src="~/dist/js/perfect-scrollbar.jquery.min.js"></script>
     <script src="~/dist/js/custom.js"></script>
     <script src="~/Content/app_script/page_script/shared.js?version=@DateTime.Now"></script>
+    <script src="~/assetsss/js/jquery.validate.min.js"></script>
+    <script src="~/assetsss/js/jquery.validate.unobtrusive.min.js"></script>
 
     @RenderSection("PageScript", required: false)
     <script>
