--- a/BuildMyUnicorn/Views/ToDo/EditTodo.cshtml
+++ b/BuildMyUnicorn/Views/ToDo/EditTodo.cshtml
@@ -3,11 +3,13 @@
 @{
     ViewBag.Title = "Edit Todo";
 }
-@if(TempData["Message"] != null)
-{
-    <div class="dz-success">
-        @TempData["Message"]
-    </div>
-}
+
 @Html.Partial("_EditToDoPartial", Model);
+
+@section PageScript
+{
+    <link href="~/assetsss/js/toastr.min.css" rel="stylesheet" />
+    <script src="~/assetsss/js/toastr.min.js"></script>
+    <script src="~/assetsss/js/todo-script.js"></script>
+}
 
